// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table row 1`] = `
<tr
  aria-selected={false}
  className="row"
  role="row"
>
  <TableCell
    content="John Smith"
    key=".$NAME"
  />
  <TableCell
    content="123 Adams Drive"
    key=".$ADDRESS"
  />
  <TableCell
    content="111-222-3333"
    key=".$PHONE_NUMBER"
  />
</tr>
`;

exports[`should render a selectable table row 1`] = `
<tr
  aria-selected={false}
  className="is-selectable row"
  role="row"
>
  <TableCell
    content="John Smith"
    isSelectable={true}
    key=".$NAME"
  />
  <TableCell
    content="123 Adams Drive"
    isSelectable={true}
    key=".$ADDRESS"
  />
  <TableCell
    content="111-222-3333"
    isSelectable={true}
    key=".$PHONE_NUMBER"
  />
</tr>
`;

exports[`should render a selected table row 1`] = `
<tr
  aria-selected={true}
  className="is-selected row"
  role="row"
>
  <TableCell
    content="John Smith"
    key=".$NAME"
  />
  <TableCell
    content="123 Adams Drive"
    key=".$ADDRESS"
  />
  <TableCell
    content="111-222-3333"
    key=".$PHONE_NUMBER"
  />
</tr>
`;
